# ChangeLog for dev-python/behave
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  19 Mar 2012; James Rowe <jnrowe@gmail.com> behave-1.1.0.ebuild:
  Switched to EAPI4.

  03 Mar 2012; James Rowe <jnrowe@gmail.com> behave-1.1.0.ebuild:
  Removed Python 2.4 support.

  29 Feb 2012; James Rowe <jnrowe@gmail.com> behave-1.1.0.ebuild:
  Keyworded x86.

  29 Feb 2012; James Rowe <jnrowe@gmail.com> behave-1.1.0.ebuild:
  Keyworded amd64.

  30 Jan 2012; James Rowe <jnrowe@gmail.com> behave-1.1.0.ebuild:
  Keyworded ~x86.

*behave-1.1.0 (30 Jan 2012)

  30 Jan 2012; James Rowe <jnrowe@gmail.com> +behave-1.1.0.ebuild,
  +metadata.xml, +watch:
  Initial ebuild, by me [516].
